# ree-lib-rs

./: Cargo.toml  LICENSE  README.md
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs  util.rs
ree-plugin/: Cargo.toml  build.rs
ree-plugin/src/: lib.rs
ref-plugin-template/: Cargo.toml
ref-plugin-template/src/: lib.rs
reframework/: Cargo.toml  README.md  build.rs
reframework/imgui-sys/: Cargo.toml  build.rs  wrapper.h
reframework/imgui-sys/src/: lib.rs
reframework/src/: imgui.rs  lib.rs  prelude.rs  ref_log.rs  regen.rs
reframework/src/sdk/: field.rs  managed_object.rs  method.rs  mod.rs  module.rs  property.rs  reflection_method.rs  reflection_property.rs  resource.rs  resource_manager.rs  tdb.rs  type_definition.rs  type_info.rs  vm_context.rs
src/: context.rs  data.rs  il2cpp.rs  language.rs  lib.rs
src/assets/: bundle.rs  error.rs  font.rs  mod.rs  msg.rs  user.rs
src/enums/: mod.rs
src/rsz/: deserializer.rs  error.rs  json_serializer.rs  map.rs  mod.rs  query.rs  rsz_type.rs
src/types/: guid.rs  mod.rs  strings.rs
src/util/: mod.rs  murmur3.rs
