[package]
name = "ree-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "file_dumper"
src = "src/bin/file_dumper.rs"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
byteorder = "1.5.0"
env_logger = "0.11.10"
half = { version = "2.7.1", features = ["serde"] }
indexmap = { version = "2.14.0", features = ["serde"] }
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = "1.23.2"
