[package]
name = "ref-plugin-template"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.30"
reframework-rs = { path = "../reframework/" }
#imgui-sys = { path = "../reframework/imgui-sys/" }
#imgui-sys = { path = "../../imgui-rs/imgui-sys/" }
#imgui = { path = "../../imgui-rs/imgui" }
