[package]
name = "reframework-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "reframework"
crate-type = ["rlib"]

#[workspace]
#members = [".", "imgui-sys"]

[build-dependencies]
cc = "1.2.63"
bindgen = "0.72.1"

[dependencies]
libloading = "0.9.0"
log = "0.4.30"
ree-lib = { path = "../" }
imgui-sys = { path = "./imgui-sys/" }
#imgui = { path = "../../imgui-rs/imgui", features = ["docking"] }
#imgui-sys = { path = "../../imgui-rs/imgui-sys/", features = ["docking" ] }
