[package]
name = "reframework-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "reframework"
crate-type = ["rlib"]

[build-dependencies]
cc = "1.2.63"
bindgen = "0.72.1"

[dependencies]
log = "0.4.30"
#ree-lib = { path = "../" }
imgui-sys = { path = "./imgui-sys/" }
chrono = "0.4.44"
#wgpu = "29.0.3"
#windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common"] }
#wgpu-hal = { version = "29.0.3", features = ["dx12"] }
