[package]
name = "reframework-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "reframework"
crate-type = ["rlib"]

[build-dependencies]
cc = "1.2.63"
bindgen = "0.72.1"

[dependencies]
log = "0.4.30"
chrono = "0.4.44"
#ree-lib = { path = "../" }
imgui-sys = { path = "./imgui-sys/" }
#imgui-sys = { path = "../../imgui-rs/imgui-sys/" }
